--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,12 @@
       integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc"
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Chivo+Mono:ital,wght@1,300&family=Roboto:wght@500&display=swap"
+      rel="stylesheet"
+    />
 
     <title>React App</title>
   </head>
