--- a/public/index.html
+++ b/public/index.html
@@ -37,9 +37,26 @@
       rel="stylesheet"
     />
 
+    <!-- ----------------- -->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@1,800&family=Yanone+Kaffeesatz&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- ----------- -->
+
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+
+    <!--  -->
     <title>Food Delivery</title>
   </head>
-  <body>
+  <body style="background-color: white">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
